manifests/app-services/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: app
spec:
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
